🐛 "Fix" settings icon jumping up after spawning the settings menu.
Move the icon to the left so it gets covered by the menu.
Remove the differently colored rectangle that appeared after spawning the settings menu.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,7 +15,7 @@
   }
 
   .app-container {
-    @apply h-screen flex flex-col pt-8 text-white;
+    @apply h-screen flex flex-col pt-8 text-white bg-slate-900;
   }
 
   .content-container {
